Added components, service package and rest countries api implemented

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.app_header{
-  color: blue;
-  text-overflow: ellipsis;
-  font-weight: bold;
+.country-card-wrapper{
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
 }
